Update signing config, fix configuration-cache compatibility (#3058)
* Do not generate (MD5) checksum for signature file

* Do not configure signatory with empty key info